examples/test/testpolicy4126.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4126
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key43: value22
      key24: value10
      key33: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value33
          key46: value17
          key40: value15
      podSelector:
        matchLabels:
          key14: value3
